+ global action space now as unmodifiable set